--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@fullcalendar/daygrid": "^6.1.17",
+        "@fullcalendar/react": "^6.1.17",
         "@headlessui/react": "^2.2.2",
         "@heroicons/react": "^2.2.0",
         "@inertiajs/react": "^1.2.0",
@@ -23,12 +25,18 @@
         "apexcharts": "^3.46.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
+        "dayjs": "^1.11.13",
         "framer-motion": "^11.11.11",
         "lucide-react": "^0.441.0",
+        "motion": "^12.15.0",
         "react": "^18.3.1",
+        "react-big-calendar": "^1.19.2",
+        "react-card-flip": "^1.2.3",
         "react-dom": "^18.3.1",
         "shadcn-ui": "^0.9.1",
         "sweetalert2": "^11.12.4",
+        "swiper": "^11.2.8",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
         "typed.js": "^2.1.0"
